Fixed bug with auth and auth/admin routers and remade Swagger to work with these new changes
